--- a/_publications/2019-pies.md
+++ b/_publications/2019-pies.md
@@ -1,4 +1,5 @@
 ---
+id:             2019-pies
 title:          "PIEs: Pose Invariant Embeddings"
 authors:        Chih-Hui Ho, <b>Pedro Morgado</b>, Amir Persekian and Nuno Vasconcelos
 venue:          IEEE Conf. on Computer Vision and Pattern Recognition (CVPR), Long Beach, CA, 2019.
