--- a/_publications/2020-avid.md
+++ b/_publications/2020-avid.md
@@ -1,4 +1,5 @@
 ---
+id:             2020-avid
 title:          "Audio-Visual Instance Discrimination with Cross-Modal Agreement"
 authors:        <b>Pedro Morgado</b>, Nuno Vasconcelos, Ishan Misra
 venue:          Preprint, 2020.
@@ -6,4 +7,9 @@ year:           "2020-09"
 thumbnail:      assets/publications/2020-avid/thumbnail.jpg
 links:
     arxiv:      https://arxiv.org/abs/2004.12943
+#other_venues:
+#    - title:    Audio-Visual Instance Discrimination
+#      venue:    ECCV Workshop - Multi-Modal Video Analysis, 2020.
+#      links:
+#        arxiv:  https://arxiv.org/abs/2004.12943
 ---
