--- a/_publications/2013-lbp.md
+++ b/_publications/2013-lbp.md
@@ -8,4 +8,11 @@ thumbnail:      assets/publications/2013-lbp/thumbnail.png
 links:
     pdf:        assets/publications/2013-lbp/paper.pdf
     bibtex:     assets/publications/2013-lbp/ref.txt
+other_venues:
+    - title:    Extending Local Binary Patterns to 3D for the Diagnosis of Alzheimer's Disease
+      venue:    International Symposium on Biomedical Imaging (ISBI), San Francisco, CA, 2013.
+      links:
+        pdf:    assets/publications/2013-lbp-isbi/paper.pdf
+        bibtex: assets/publications/2013-lbp-isbi/ref.txt
+        poster: assets/publications/2013-lbp-isbi/poster.pdf
 ---
