avid workshop content

--- a/_publications/2020-avid.md
+++ b/_publications/2020-avid.md
@@ -10,4 +10,8 @@ links:
 other_venues:
     - title:    Audio-Visual Instance Discrimination
       venue:    ECCV Workshop - Multi-Modal Video Analysis, 2020.
+      links:
+        pdf:    assets/publications/2020-avid/eccv20_workshop_avid.pdf
+        talk:   https://youtu.be/nkWAVi59Da4
+        slides: assets/publications/2020-avid/eccv20_workshop_slides_flattened.pdf
 ---
