--- a/_publications/2020-avid.md
+++ b/_publications/2020-avid.md
@@ -7,6 +7,8 @@ year:           "2020-09"
 thumbnail:      assets/publications/2020-avid/thumbnail.jpg
 links:
     arxiv:      https://arxiv.org/abs/2004.12943
+    code:       https://github.com/facebookresearch/AVID-CMA
+    bibtex:     assets/publications/2020-avid/ref.txt
 other_venues:
     - title:    Audio-Visual Instance Discrimination
       venue:    ECCV Workshop - Multi-Modal Video Analysis, 2020.
