--- a/_publications/2020-avid.md
+++ b/_publications/2020-avid.md
@@ -2,8 +2,8 @@
 id:             2020-avid
 title:          "Audio-Visual Instance Discrimination with Cross-Modal Agreement"
 authors:        <b>Pedro Morgado</b>, Nuno Vasconcelos, Ishan Misra
-venue:          Preprint, 2020.
-year:           "2020-09"
+venue:          IEEE Conf. on Computer Vision and Pattern Recognition (CVPR), 2021.
+year:           "2021-03"
 thumbnail:      assets/publications/2020-avid/thumbnail.jpg
 links:
     arxiv:      https://arxiv.org/abs/2004.12943
