add pdf for cvpr papers

--- a/_publications/2019-pies.md
+++ b/_publications/2019-pies.md
@@ -2,7 +2,7 @@
 id:             2019-pies
 title:          "PIEs: Pose Invariant Embeddings"
 authors:        Chih-Hui Ho, <b>Pedro Morgado</b>, Amir Persekian and Nuno Vasconcelos
-venue:          IEEE Conf. on Computer Vision and Pattern Recognition (CVPR), Long Beach, CA, 2019.
+venue:          IEEE/CVF Conf. on Computer Vision and Pattern Recognition (CVPR), Long Beach, CA, 2019.
 year:           "2019-06"
 thumbnail:      assets/publications/2019-pies/thumbnail.jpg
 links:
