--- a/_publications/2021-avid.md
+++ b/_publications/2021-avid.md
@@ -4,6 +4,7 @@ title:          "Audio-Visual Instance Discrimination with Cross-Modal Agreement
 authors:        <b>Pedro Morgado</b>, Nuno Vasconcelos, Ishan Misra
 venue:          IEEE/CVF Conf. on Computer Vision and Pattern Recognition (CVPR), 2021.
 year:           "2021-03"
+highlight:      Best paper candidate
 thumbnail:      assets/publications/2021-avid/thumbnail.jpg
 links:
     pdf:    	assets/publications/2021-avid/cvpr21-avid.pdf
