--- a/_publications/2021-avid.md
+++ b/_publications/2021-avid.md
@@ -10,6 +10,7 @@ links:
     pdf:    	assets/publications/2021-avid/cvpr21-avid.pdf
     arxiv:      https://arxiv.org/abs/2004.12943
     code:       https://github.com/facebookresearch/AVID-CMA
+    video:      https://youtu.be/WWwJ_NLQQ9w
     bibtex:     assets/publications/2021-avid/ref.txt
 other_venues:
     - title:    Audio-Visual Instance Discrimination
