--- a/_publications/2021-avid.md
+++ b/_publications/2021-avid.md
@@ -7,6 +7,7 @@ year:           "2021-03"
 highlight:      Best paper candidate
 thumbnail:      assets/publications/2021-avid/thumbnail.jpg
 links:
+    blogpost:	https://ai.facebook.com/blog/audiovisual-self-supervised-representation-learning
     pdf:    	assets/publications/2021-avid/cvpr21-avid.pdf
     arxiv:      https://arxiv.org/abs/2004.12943
     code:       https://github.com/facebookresearch/AVID-CMA
