clean links. add thesis

--- a/_publications/2013-lbp.md
+++ b/_publications/2013-lbp.md
@@ -6,13 +6,12 @@ venue:          "Computer Methods in Biomechanics and Biomedical Engineering: Im
 year:           "2013"
 thumbnail:      assets/publications/2013-lbp/thumbnail.png
 links:
-    pdf:        assets/publications/2013-lbp/paper.pdf
+    paper:        assets/publications/2013-lbp/paper.pdf
     bibtex:     assets/publications/2013-lbp/ref.txt
 other_venues:
     - title:    Extending Local Binary Patterns to 3D for the Diagnosis of Alzheimer's Disease
       venue:    International Symposium on Biomedical Imaging (ISBI), San Francisco, CA, 2013.
       links:
-        pdf:    assets/publications/2013-lbp-isbi/paper.pdf
-        poster: assets/publications/2013-lbp-isbi/poster.pdf
+        paper:    assets/publications/2013-lbp-isbi/paper.pdf
         bibtex: assets/publications/2013-lbp-isbi/ref.txt
 ---
