--- a/_publications/2019-pies.md
+++ b/_publications/2019-pies.md
@@ -6,11 +6,11 @@ venue:          IEEE/CVF Conf. on Computer Vision and Pattern Recognition (CVPR)
 year:           "2019-06"
 thumbnail:      assets/publications/2019-pies/thumbnail.jpg
 links:
-    website:    http://www.svcl.ucsd.edu/projects/OOWL/CVPR2019_PIE.html
     pdf:        assets/publications/2019-pies/paper.pdf
+    paper:      https://openaccess.thecvf.com/content_CVPR_2019/papers/Ho_PIEs_Pose_Invariant_Embeddings_CVPR_2019_paper.pdf
     suppl:      http://www.svcl.ucsd.edu/projects/OOWL/CVPR2019_PIE/supp.pdf
     code:       https://github.com/chihhuiho/PIE_pose_invariant_embedding
     data:       https://drive.google.com/file/d/1AAO-Wn6mfIAUN8AcfVoT731XObisVqNV/view?usp=sharing
-    poster:     assets/publications/2019-pies/poster.pdf
+    website:    http://www.svcl.ucsd.edu/projects/OOWL/CVPR2019_PIE.html
     bibtex:     assets/publications/2019-pies/ref.txt
 ---
