--- a/_publications/2021-avid.md
+++ b/_publications/2021-avid.md
@@ -7,17 +7,16 @@ year:           "2021-03"
 highlight:      Best paper candidate
 thumbnail:      assets/publications/2021-avid/thumbnail.jpg
 links:
-    blogpost:	https://ai.facebook.com/blog/audiovisual-self-supervised-representation-learning
     pdf:    	assets/publications/2021-avid/cvpr21-avid.pdf
-    arxiv:      https://arxiv.org/abs/2004.12943
+    paper:      https://arxiv.org/abs/2004.12943
     code:       https://github.com/facebookresearch/AVID-CMA
     video:      https://youtu.be/WWwJ_NLQQ9w
+    blogpost:	https://ai.facebook.com/blog/audiovisual-self-supervised-representation-learning
     bibtex:     assets/publications/2021-avid/ref.txt
 other_venues:
     - title:    Audio-Visual Instance Discrimination
       venue:    ECCV Workshop - Multi-Modal Video Analysis, 2020.
       links:
-        pdf:    assets/publications/2021-avid/eccv20_workshop_avid.pdf
+        paper:  assets/publications/2021-avid/eccv20_workshop_avid.pdf
         talk:   https://youtu.be/nkWAVi59Da4
-        slides: assets/publications/2021-avid/eccv20_workshop_slides_flattened.pdf
 ---
