--- a/_publications/2013-lbp.md
+++ b/_publications/2013-lbp.md
@@ -1,7 +1,10 @@
 ---
 id:             2013-lbp
 title:          Diagnosis of Alzheimer's disease using 3D Local Binary Patterns
-authors:        <b>Pedro Morgado</b>, Margarida Silveira and Jorge S Marques
+authors:
+    - Me
+    - Margarida
+    - JorgeMarques
 venue:          "Computer Methods in Biomechanics and Biomedical Engineering: Imaging Visualization, Vol. 1, April, 2013"
 year:           "2013"
 thumbnail:      assets/publications/2013-lbp/thumbnail.png
