--- a/_publications/2021-avid.md
+++ b/_publications/2021-avid.md
@@ -1,7 +1,10 @@
 ---
 id:             2021-avid
 title:          "Audio-Visual Instance Discrimination with Cross-Modal Agreement"
-authors:        <b>Pedro Morgado</b>, Nuno Vasconcelos, Ishan Misra
+authors:        
+    - Me
+    - Nuno
+    - Ishan
 venue:          IEEE/CVF Conf. on Computer Vision and Pattern Recognition (CVPR), 2021.
 year:           "2021-03"
 highlight:      Best paper candidate
