ezvsl and continuous ssl

--- a/_publications/2013-lbp.md
+++ b/_publications/2013-lbp.md
@@ -8,6 +8,7 @@ authors:
 venue:          "Computer Methods in Biomechanics and Biomedical Engineering: Imaging Visualization, Vol. 1, April, 2013"
 year:           "2013"
 thumbnail:      assets/publications/2013-lbp/thumbnail.png
+thumb_width:    80
 links:
     paper:        assets/publications/2013-lbp/paper.pdf
     bibtex:     assets/publications/2013-lbp/ref.txt
