--- a/_publications/2021-avid.md
+++ b/_publications/2021-avid.md
@@ -9,6 +9,7 @@ venue:          IEEE/CVF Conf. on Computer Vision and Pattern Recognition (CVPR)
 year:           "2021-03"
 highlight:      Best paper candidate
 thumbnail:      assets/publications/2021-avid/thumbnail.jpg
+thumb_width:    80
 links:
     pdf:    	assets/publications/2021-avid/cvpr21-avid.pdf
     paper:      https://arxiv.org/abs/2004.12943
