--- a/_publications/2021-avid.md
+++ b/_publications/2021-avid.md
@@ -7,7 +7,7 @@ authors:
     - Ishan
 venue:          IEEE/CVF Conf. on Computer Vision and Pattern Recognition (CVPR), 2021.
 year:           "2021-03"
-highlight:      Best paper candidate
+highlight:      "<i class='fa-solid fa-award'></i> Best paper candidate"
 thumbnail:      assets/publications/2021-avid/thumbnail.jpg
 thumb_width:    80
 links:
