--- a/_publications/2013-lbp.md
+++ b/_publications/2013-lbp.md
@@ -18,4 +18,7 @@ other_venues:
       links:
         paper:    assets/publications/2013-lbp-isbi/paper.pdf
         bibtex: assets/publications/2013-lbp-isbi/ref.txt
+layout: project
+short_title: LBP based AD diagnosis
+abstract: "In the last decade, the computerized diagnosis of Alzheimer’s disease (AD) and Mild Cognitive Impairment (MCI) using the information provided by different neuroimaging techniques has been extensively studied. However, the texture of such neuroimages has been little explored. In this work, both diagnosis were conducted based solely on the texture of FDG-PET images, which was extracted using a novel three-dimensional extension of the well-known two-dimensional texture descriptor Local Binary Patterns (LBP). In LBPs, the concepts of uniformity and rotation invariance are of fundamental importance. We show that the proposed approach, unlike other 3D extensions found in the literature, closely replicates these concepts, as originally proposed in the 2D setting. Experimental results showed that the new 3D LBP version is able to enhance the generalization ability of the diagnostic system and also that the texture of FDG-PET scans contains distinctive information about the presence of both AD and MCI."
 ---
