--- a/_publications/2019-pies.md
+++ b/_publications/2019-pies.md
@@ -9,6 +9,7 @@ authors:
 venue:          IEEE/CVF Conf. on Computer Vision and Pattern Recognition (CVPR), Long Beach, CA, 2019.
 year:           "2019-06"
 thumbnail:      assets/publications/2019-pies/thumbnail.jpg
+bibtex:         "@InProceedings{Ho_2019_CVPR,<br>&emsp;author = {Ho, Chih-Hui and Morgado, Pedro and Persekian, Amir and Vasconcelos, Nuno},<br>&emsp;title = {PIEs: Pose Invariant Embeddings},<br>&emsp;booktitle = {Computer Vision and Pattern Recognition (CVPR), IEEE/CVF Conf. on },<br>&emsp;month = {June},<br>&emsp;year = {2019}<br>}"
 links:
    pdf:        assets/publications/2019-pies/paper.pdf
    paper:      https://openaccess.thecvf.com/content_CVPR_2019/papers/Ho_PIEs_Pose_Invariant_Embeddings_CVPR_2019_paper.pdf
