--- a/_publications/2021-avid.md
+++ b/_publications/2021-avid.md
@@ -10,6 +10,7 @@ year:           "2021-03"
 highlight:      "<i class='fa-solid fa-award'></i> Best paper candidate"
 thumbnail:      assets/publications/2021-avid/thumbnail.jpg
 thumb_width:    80
+bibtex:         "@InProceedings{morgado2021avid,<br>&emsp;title={Audio-Visual Instance Discrimination with Cross-Modal Agreement},<br>&emsp;author={Pedro Morgado, Nuno Vasconcelos, Ishan Misra},<br>&emsp;booktitle={Computer Vision and Pattern Recognition (CVPR), IEEE/CVF Conf. on },<br>&emsp;year={2021}<br>}"
 links:
     pdf:    	assets/publications/2021-avid/cvpr21-avid.pdf
     paper:      https://arxiv.org/abs/2004.12943
